--- a/samples/gst-sdl/CMakeLists.txt
+++ b/samples/gst-sdl/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDL2 REQUIRED IMPORTED_TARGET sdl2)
 pkg_check_modules(OpenGL REQUIRED IMPORTED_TARGET egl glesv2)
 pkg_check_modules(GStreamer REQUIRED IMPORTED_TARGET gstreamer-1.0 gstreamer-app-1.0)
-pkg_check_modules(json REQUIRED IMPORTED_TARGET json-c)
+pkg_check_modules(json REQUIRED IMPORTED_TARGET json-c pbnjson_cpp)
 
 add_executable(gst-sdl 
 src/main.c
@@ -22,7 +22,7 @@ target_compile_definitions(gst-sdl PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>")
 target_include_directories(gst-sdl PRIVATE ${CMAKE_SOURCE_DIR}/utils/include)
 
 target_link_libraries(gst-sdl PRIVATE
- PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::GStreamer
+ PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::GStreamer PkgConfig::json
  Acb StarfishMediaAPIs
  m
 )
