--- a/samples/gst-sdl/CMakeLists.txt
+++ b/samples/gst-sdl/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 
 include(WebOSPackage)
 
-project(gst-sdl LANGUAGES CXX)
+project(starfish-sdl LANGUAGES CXX)
 set (CMAKE_CXX_STANDARD 11)
 
 find_package(PkgConfig REQUIRED)
@@ -12,28 +12,28 @@ pkg_check_modules(OpenGL REQUIRED IMPORTED_TARGET egl glesv2)
 pkg_check_modules(GStreamer REQUIRED IMPORTED_TARGET gstreamer-1.0 gstreamer-app-1.0)
 pkg_check_modules(json REQUIRED IMPORTED_TARGET json-c pbnjson_cpp)
 
-add_executable(gst-sdl 
+add_executable(starfish-sdl 
 src/main.c
 src/gst_sample.c
 src/StarfishDirectMediaPlayer.cpp
+src/SDL_webOS.c
 )
 
-target_compile_definitions(gst-sdl PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>")
-target_include_directories(gst-sdl PRIVATE ${CMAKE_SOURCE_DIR}/utils/include)
+target_compile_definitions(starfish-sdl PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>" _GNU_SOURCE)
+target_include_directories(starfish-sdl PRIVATE ${CMAKE_SOURCE_DIR}/utils/include)
 
-target_link_libraries(gst-sdl PRIVATE
+target_link_libraries(starfish-sdl PRIVATE
  PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::GStreamer PkgConfig::json
- Acb StarfishMediaAPIs
- m
+ StarfishMediaAPIs
+ m dl
 )
 
-set_target_properties(gst-sdl PROPERTIES
+set_target_properties(starfish-sdl PROPERTIES
     WEBOS_APPINFO_ID org.webosbrew.sample.starfish-player.gst-sdl
     WEBOS_APPINFO_VERSION 0.0.1
     WEBOS_APPINFO_VENDOR "Mariotaku Lee"
     WEBOS_APPINFO_ICON ${CMAKE_CURRENT_SOURCE_DIR}/icon.png
-    WEBOS_APPINFO_TITLE "NDL+GST+SDL"
-    WEBOS_APPINFO_EXTRA "nativeLifeCycleInterfaceVersion=2"
+    WEBOS_APPINFO_TITLE "Starfish"
 )
 
-target_webos_package(gst-sdl)
+target_webos_package(starfish-sdl)
