--- a/samples/gst-sdl/CMakeLists.txt
+++ b/samples/gst-sdl/CMakeLists.txt
@@ -9,12 +9,10 @@ find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(SDL2 REQUIRED IMPORTED_TARGET sdl2)
 pkg_check_modules(OpenGL REQUIRED IMPORTED_TARGET egl glesv2)
-pkg_check_modules(GStreamer REQUIRED IMPORTED_TARGET gstreamer-1.0 gstreamer-app-1.0)
 pkg_check_modules(json REQUIRED IMPORTED_TARGET json-c pbnjson_cpp)
 
 add_executable(starfish-sdl 
 src/main.c
-src/gst_sample.c
 src/StarfishDirectMediaPlayer.cpp
 src/SDL_webOS.c
 )
@@ -23,7 +21,7 @@ target_compile_definitions(starfish-sdl PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>" _GNU_S
 target_include_directories(starfish-sdl PRIVATE ${CMAKE_SOURCE_DIR}/utils/include)
 
 target_link_libraries(starfish-sdl PRIVATE
- PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::GStreamer PkgConfig::json
+ PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::json
  StarfishMediaAPIs
  m dl
 )
