--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDL2 REQUIRED IMPORTED_TARGET sdl2)
 pkg_check_modules(OpenGL REQUIRED IMPORTED_TARGET egl glesv2)
 pkg_check_modules(json REQUIRED IMPORTED_TARGET json-c pbnjson_cpp)
+pkg_check_modules(PmLogLib REQUIRED IMPORTED_TARGET PmLogLib)
 
 add_executable(player-sample 
 src/main.c
@@ -21,8 +22,8 @@ target_compile_definitions(player-sample PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>" _GNU_
 target_include_directories(player-sample PRIVATE ${CMAKE_SOURCE_DIR}/utils/include)
 
 target_link_libraries(player-sample PRIVATE
- PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::json
- playerAPIs m dl
+ PkgConfig::SDL2 PkgConfig::OpenGL PkgConfig::json PkgConfig::PmLogLib
+ playerAPIs m dl pthread
 )
 
 set_target_properties(player-sample PROPERTIES
